# simple-atm-controller

./: .gitignore  CMakeLists.txt  README.md
src/: AtmController.cc  AtmController.h  BankAccount.h  BankApiAccessManager.cc  BankApiAccessManager.h  BankApiAccessManagerBase.h  BankApiAccessManagerInterface.h  CMakeLists.txt  CardReader.cc  CardReader.h  CardReaderBase.h  CardReaderInterface.h  atmcontroller.cc  atmcontroller.h  bankaccount.h  bankcommunicator.cc  bankcommunicator.h  cardreader.cc  cardreader.h
src/tests/: CMakeLists.txt  TestAtmController.cc  TestAtmController.h  TestBankApiAccessManager.cc  TestBankApiAccessManager.h  TestCardReader.cc  TestCardReader.h  testbankcommunicator.cc  testbankcommunicator.h  testcardreader.cc  testcardreader.h  testhelloworld.cc  testhelloworld.h
